--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ EMAIL_USER=srinivas.pandralaa@gmail.com
 EMAIL_PASS=pysaapvijqvakexm
 JWT_SECRET="HRMrandomkey"
 PORT=5000
+PREFIX="GTS"
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=admin123
